--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@ionic-native/app-version": "^5.27.0",
     "@ionic-native/core": "^5.0.7",
     "@ionic-native/file": "^5.27.0",
+    "@ionic-native/social-sharing": "^5.27.0",
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^5.0.0",
@@ -36,6 +37,7 @@
     "cordova-plugin-x-socialsharing": "^5.6.8",
     "cordova-promise-polyfill": "0.0.2",
     "cordova-sqlite-storage": "^5.0.0",
+    "dom-to-image": "^2.6.0",
     "es6-promise-plugin": "^4.2.2",
     "firebase": "^7.16.0",
     "rxjs": "~6.5.1",
@@ -90,9 +92,7 @@
       },
       "cordova-plugin-app-version": {},
       "cordova-plugin-file": {},
-      "cordova-plugin-x-socialsharing": {
-        "ANDROID_SUPPORT_V4_VERSION": "24.1.1+"
-      },
+      "cordova-plugin-x-socialsharing": {},
       "cordova-sqlite-storage": {}
     },
     "platforms": [
