--- a/ngsw-config.json
+++ b/ngsw-config.json
@@ -25,6 +25,17 @@
           "/*.(eot|svg|cur|jpg|png|webp|gif|otf|ttf|woff|woff2|ani)"
         ]
       }
+    },
+    {
+      "name": "icons",
+      "installMode": "prefetch",
+      "updateMode": "prefetch",
+      "resources": {
+        "files": [
+          "/svg/*.svg",
+          "/svg/concrete.svg"
+        ]
+      }
     }
   ]
 }
